Update entity sur la branche main